cmake_minimum_required(VERSION 4.0)
project(2025_cpl_coding_for_docs C)

set(CMAKE_C_STANDARD 11)

add_executable(2025_cpl_coding_for_docs
        test1.c
        0923_printf_scanf_essese.c
        0923_MAX_MIN_LIMITS.c
        0923hour_minus.c
        0923value_exchange.c
        0923nums_reversed_order.c
        0923pliu_plus_a_and_a_plus_plus.c
        0923circle.c
        0923mol-oxygen.c
        0923ctype_function.c
        0925OJ_change.c
        0925OJ_ascii.c
        0925OJ_pi_2.c
        0925OJ_sensor.c
        julian.c
        gas.c
        azimuth.c
        equation.c
        0926OJ_pmtdm.c
        0926OJ_swap.c
        0926_OJ_pi1.c
        0926_OJ_gravity.c
        0928_scanf1.c
        0928_srrlen_sizeof.c
        0928_string_admic.c
        "0928_scanf_return .c"
        PLUS_mathlibrary.c
        0930_classs1_note1.c
        0930_class_switch_case.c
        0930_class_for.c
        0930_for_loop_calculation.c
        0930_starPyramid.c
        0930_Array.c
        1001_OJ_time.c
        1001_OJ_username.c
        1001_OJ_memory_viewer.c
        1001_OJ_panel.c
)
